hide categories heading on mobile (bug 800178)

--- a/media/css/mkt/categories.less
+++ b/media/css/mkt/categories.less
@@ -1,4 +1,7 @@
 .categories {
+    h2 {
+        display: none;
+    }
     .icon {
         background: url(../../img/mkt/glyphs/rocket.png) 50% 35% no-repeat;
         &:after {
